<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="229dp"
        android:layout_height="0dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="42dp"
        android:gravity="center"
        android:text="@string/tvTitle"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnOpe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editNum1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/hintNum1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editNum2"
        app:layout_constraintEnd_toEndOf="@+id/editNum2" />

    <EditText
        android:id="@+id/editNum2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="316dp"
        android:ems="10"
        android:hint="@string/hintNum2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOpe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="512dp"
        android:text="@string/btnOpe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editNum1"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>